(CVL-623) Add --passWithNoTests flag to node test step

--- a/cmd/inferconfig/testdata/expected/circleci-demo-javascript-express.yml
+++ b/cmd/inferconfig/testdata/expected/circleci-demo-javascript-express.yml
@@ -13,7 +13,7 @@ jobs:
           pkg-manager: npm
       - run:
           name: Run tests
-          command: npm test
+          command: npm test --passWithNoTests
   build-node:
     # Build node project
     executor: node/default
